[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pdf-agent"
version = "0.1.0"
description = "Forensic PDF analysis utilities"
requires-python = ">=3.11"
dependencies = [
    "pdfid>=1.1.3",
    "langgraph",
    "langgraph-prebuilt",
    "langgraph-sdk",
    "langgraph-checkpoint-sqlite",
    "langsmith",
    "langchain-community",
    "langchain-core",
    "langchain-openai",
    "notebook",
    "tavily-python",
    "wikipedia",
    "trustcall",
    "langgraph-cli[inmem]",
    "pydantic>=2.0",
    "typing-extensions"
]

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
    "isort",
    "flake8"
]

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
pdf-agent = "static_analysis.graph:main"
